[feat] full-screen modal editor, flat prompt list
Replace accordion with flat prompt rows showing title, badges, and description. Edit button opens a full-screen dark modal with tab key support, variable chips, Esc/backdrop dismiss.

--- a/apps/extension/options.html
+++ b/apps/extension/options.html
@@ -7,24 +7,15 @@
   <link rel="stylesheet" href="dist/tailwind.css">
   <style>
     /* Editor textarea — Tailwind can't express these resize/scrollbar tweaks */
-    .editor-textarea {
+    /* Full editor in modal */
+    .editor-full {
       tab-size: 2;
-      resize: vertical;
-      field-sizing: content;
-      min-height: 80px;
-      max-height: 420px;
-    }
-    .editor-textarea:read-only {
-      max-height: 96px;
-      overflow: hidden;
       resize: none;
+      height: 100%;
     }
-    .editor-textarea:not(:read-only) {
-      min-height: 260px;
-    }
-    .editor-textarea::-webkit-scrollbar { width: 6px; }
-    .editor-textarea::-webkit-scrollbar-track { background: transparent; }
-    .editor-textarea::-webkit-scrollbar-thumb { background: #3f3f46; border-radius: 3px; }
+    .editor-full::-webkit-scrollbar { width: 6px; }
+    .editor-full::-webkit-scrollbar-track { background: transparent; }
+    .editor-full::-webkit-scrollbar-thumb { background: #3f3f46; border-radius: 3px; }
   </style>
 </head>
 <body class="bg-zinc-50 text-zinc-900 antialiased">
@@ -97,6 +88,31 @@
       </div>
     </section>
 
+  </div>
+
+  <!-- Editor Modal -->
+  <div id="editor-modal" class="fixed inset-0 z-50 hidden">
+    <div class="absolute inset-0 bg-black/60 backdrop-blur-sm" data-modal-backdrop></div>
+    <div class="absolute inset-4 sm:inset-8 flex flex-col bg-zinc-950 rounded-2xl border border-zinc-800 shadow-2xl overflow-hidden">
+      <!-- Modal header -->
+      <div class="flex items-center justify-between px-5 py-3.5 border-b border-zinc-800 shrink-0">
+        <div class="flex items-center gap-3">
+          <span class="text-sm font-semibold text-zinc-100" data-modal-title></span>
+          <span class="text-[10px] font-medium px-1.5 py-0.5 rounded border" data-modal-badge></span>
+        </div>
+        <div class="flex items-center gap-2">
+          <button class="text-xs font-medium px-3 py-1.5 rounded-md bg-white text-zinc-900 hover:bg-zinc-200 transition-colors cursor-pointer" data-modal-save>Save</button>
+          <button class="text-xs font-medium px-3 py-1.5 rounded-md bg-zinc-800 text-zinc-300 hover:bg-zinc-700 transition-colors cursor-pointer" data-modal-cancel>Cancel</button>
+          <button class="text-xs font-medium text-red-400 hover:text-red-300 transition-colors cursor-pointer ml-2" data-modal-reset></button>
+        </div>
+      </div>
+      <!-- Variable chips -->
+      <div class="px-5 py-2.5 border-b border-zinc-800 shrink-0 hidden" data-modal-vars></div>
+      <!-- Editor body -->
+      <div class="flex-1 min-h-0">
+        <textarea class="editor-full w-full h-full px-5 py-4 text-sm font-mono leading-relaxed bg-zinc-950 text-zinc-100 focus:outline-none placeholder:text-zinc-600" data-modal-editor></textarea>
+      </div>
+    </div>
   </div>
 
   <script type="module" src="dist/options.js"></script>
